# pausaler-app

./: .gitignore  LICENSE  README.md  dev-docs-server.cjs  package-lock.json  package.json
.github/workflows/: ci-build.yml  release.yml
docs/: CNAME  ci-cd.md  index.html
docs/updates/: README.md  latest.json
license-generator/: Cargo.toml  README.md
license-generator-ui/: README.md  index.html  package.json  vite.config.ts
license-generator-ui/src/: main.ts
license-generator-ui/src-tauri/: Cargo.toml  tauri.conf.json
license-generator-ui/src-tauri/src/: licensing.rs  main.rs
license-generator/src/: main.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: public_key.pem
src-tauri/assets/data/: serbia_zip_codes.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  offers.rs
src-tauri/src/license/: activation_code.rs  crypto.rs  license_payload.rs  license_validator.rs  mod.rs
src/app/: App.tsx  i18n.ts
src/app/components/: LicenseGate.tsx  TitleBar.tsx  TrialExpiredModal.tsx
src/app/hooks/: useClients.ts  useExpenses.ts  useInvoices.ts  useOffers.ts  useSerbiaCities.ts  useSettings.ts  useUpdateBadge.ts
src/app/layouts/: MainLayout.tsx
src/app/locales/: en.ts  sr.ts
src/app/pages/: ClientsPage.tsx  ExpensesPage.tsx  ExportsPage.tsx  InvoiceViewPage.tsx  InvoicesPage.tsx  LicensePage.tsx  NewInvoicePage.tsx  NewOfferPage.tsx  OffersPage.tsx  OverviewPage.tsx  ReportsPage.tsx  SettingsPage.tsx  SetupCompanyPage.tsx
src/app/services/: backupService.ts  companyAddress.ts  defaultSettings.ts  devLockService.ts  featureGate.ts  invoiceOverdue.ts  invoicePdf.ts  licenseCodeGenerator.ts  licenseService.ts  lockAudit.ts  mandatoryInvoiceNote.ts  seedData.ts  serbiaZipCodes.ts  smtp.ts  smtpTest.ts  sqliteStorageAdapter.ts  storage.ts  storageAdapter.ts  storageProvider.ts  storeStorageAdapter.ts  trialService.ts  updateService.ts
src/app/types/: index.ts  license.ts
src/shared/: invoiceEmailLabels.json  mandatoryInvoiceNote.json  pdfLabels.json
src/styles/: index.css
