[package]
name = "license-generator-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
tauri = { version = "2", features = [] }

[dependencies.tauri-plugin-shell]
version = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
